# rainforest

./: .buildinfo  .gitignore  CNAME  LICENSE  MANIFEST.in  README.md  environment.yml  examples.html  genindex.html  index.html  modules.html  nohup.out  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements.txz~  search.html  searchindex.js  setup.py  test_requirements.txt  usage.html
.conda/: meta.yaml
_sources/: usage.rst.txt
docs/: .conf.py.swp  README  conf.py  environment.yml  index.rst  requirements.txt  usage.rst
examples/: 0.job  20190610_job  20190806_job  20190922_job  20191015_job  20191124_job  20200129_job  all_scores.p  all_scores_stats.p  crossval.py  intercomparison_config_example.yml  slurm-2609449.out  slurm-2609450.out  slurm-2609451.out  slurm-2609452.out  slurm-2609453.out  slurm-2609454.out  slurm-2612890.out  test.py
rainforest/: .pre-commit-config.yaml  __init__.py  interface.py
rainforest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
rainforest_mch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reference/: common.html  db.html  db_cmd.html  db_options.html  db_structure.html  index.html  interface.html  ml.html  ml_cmd.html  modules.html  qpe.html  qpe_cmd.html  rainforest.database.html  rainforest.html  rainforest.ml.html  rainforest.ml.rf_models.html  rainforest.qpe.html
tests_cscs/: summary.txt  test_retrieve_radar_data.py  test_task_file.txt
tools/: 20190610_job  20190806_job  20190922_job  20191015_job  20191124_job  20200129_job  2020129_job  config.yml  (+11 more)
(+218 files in other folders)
