[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "rainforest-mch"
version = "1.5.1"
description = "RandomForest QPE python library"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "Rebecca Gugerli", email = "rebecca.gugerli@epfl.ch" },
  { name = "Daniel Wolfensberger", email = "daniel.wolfensberger@meteoswiss.ch" }
]

# If you want pip to read requirements.txt instead of duplicating, use this:
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
packages = [
  "rainforest",
  "rainforest.common",
  "rainforest.qpe",
  "rainforest.ml",
  "rainforest.database_5min",
  "rainforest.database_10min",
  "rainforest.performance",
]
include-package-data = true
zip-safe = false

[project.scripts]
rainforest_interface = "rainforest.interface:main"
qpe_compute = "rainforest.qpe.qpe_compute:main"
qpe_plot = "rainforest.qpe.qpe_plot:main"
qpe_evaluation = "rainforest.qpe.qpe_evaluation:main"
db_populate = "rainforest.database_10min.db_populate:main"
db_populate_5min = "rainforest.database_5min.db_populate:main"
rf_train = "rainforest.ml.rf_train:main"
interact_cloud = "rainforest.common.interact_cloud:main"
jretrievedwh = "rainforest.common.jretrievedwh:main"

